--- a/Resources/Localizable.strings
+++ b/Resources/Localizable.strings
@@ -5,9 +5,11 @@
   Created by Олег Лейзер on 20.10.2017.
   Copyright © 2017 Олег Лейзер. All rights reserved.
 */
-"Intro.Welcome.text" = "Добро пожаловать\nЭто проект шаблон";
-"Intro.Message.text" = "Для продолжения нажмите кнопку \"Продолжить\"";
+"Intro.Welcome.text" = "Добро пожаловать в Тестоваое приложение";
+"Intro.Message.text" = "Для продолжения Вам необходимо авторизироваться. Для этого нажмите кнопку \"Продолжить\"";
 "Intro.Next.title" = "Продолжить";
+
+
 
 "Login.Navigation.Title" = "Авторизация";
 
