--- a/Resources/Localizable.strings
+++ b/Resources/Localizable.strings
@@ -12,6 +12,9 @@
 
 
 "Login.Navigation.Title" = "Авторизация";
+"Login.NextButton.title" = "Продолжить";
+"Login.EmailTextField.Placeholder" = "Email";
+
 
 "City.Navigation.Title" = "Выбор города";
 
