--- a/Resources/Localizable.strings
+++ b/Resources/Localizable.strings
@@ -14,6 +14,7 @@
 "Login.Navigation.Title" = "Авторизация";
 "Login.NextButton.title" = "Продолжить";
 "Login.EmailTextField.Placeholder" = "Email";
+"Login.InfoLabel.text" = "Для авторизации введите ваш адрес электронной почты на который будет выслан ключ который необходимо ввести на следущем экране";
 
 
 "City.Navigation.Title" = "Выбор города";
